--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
           <div class="skill-row">
             <img class="computer-img" src="CSS - My Site Images/computer.png" alt="">
             <h3>Web-developer</h3>
-            <p class="no-wrap">Currently building and creating new websites for clients worldwide. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis vero delectus illum, vitae labore eos modi iure sapiente officiis magnam.</p>
+            <p class="no-wrap">Currently building and creating new websites for clients worldwide.</p>
           </div>
           <div class="skill-row">
             <img class="chilli-img" src="CSS - My Site Images/react.png" alt="">
             <h3 class="no-wrap1">React Developer</h3>
-            <p class="no-wrap1"> Currently learning React Js and will be implementing it into Web- developement and Android developement . Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto nemo neque possimus fugiat quod aut beatae amet error porro? Iusto? </p>
+            <p class="no-wrap1"> Currently learning React Js and will be implementing it into Web- developement and Android developement .</p>
           </div>
         </div>
         <hr>
